--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
                 <ul>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://evening-temple-51271/December%2015,%202015</code><br>
-            <code>https://evening-temple-51271/1450137600</code>
+            <code>https://evening-temple-51271.herokuapp.com/December%2015,%202015</code><br>
+            <code>https://evening-temple-51271.herokuapp.com/1450137600</code>
             <h3>Example output:</h3>
             <code>
                 {
