--- a/public/index.html
+++ b/public/index.html
@@ -8,24 +8,17 @@
     <body>
         <div class="container">
             <h1 class="header">
-                API Basejump: Timestamp microservice
+                API Basejump: Request Header Parser
             </h1>
             <blockquote>
                 User stories:
-                <ul>1) I can pass a string as a parameter, and it will check to see whether that string 
-                contains either a unix timestamp or a natural language date (example: January 1, 2016)</ul>
-                <ul>2) If it does, it returns both the Unix timestamp and the natural language form of that date.</ul>
-                <ul>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</ul>
+                <ul>If I go to /whoami, it'll show me some info about my IP address and browser and stuff</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://evening-temple-51271.herokuapp.com/December%2015,%202015</code><br>
-            <code>https://evening-temple-51271.herokuapp.com/1450137600</code>
+            <code>https://request-header-parser-gkobilansky.c9users.io/whoami</code><br>
             <h3>Example output:</h3>
             <code>
-                {
-                  "unix": 1450137600,
-                  "natural": "December 15, 2015"
-                }
+                {"ipaddress":"99.69.112.239","language":"en-US","software":"Macintosh; Intel Mac OS X 10_11_2"}
             </code>
         </div>
     </body>
