updated example urls

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                 <ul>If I go to /whoami, it'll show me some info about my IP address and browser and stuff</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://evening-temple-51271.herokuapp.com/whoami</code><br>
+            <code>https://stark-stream-79701.herokuapp.com/whoami</code><br>
             <h3>Example output:</h3>
             <code>
                 {"ipaddress":"99.69.112.239","language":"en-US","software":"Macintosh; Intel Mac OS X 10_11_2"}
