updated index and readme

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <h3>Also available as API</h3>
            <p><code>lancekey.com/new/www.example.com</code> responds with JSON:</p>
            <pre>
-           {"original_url":"http://google.com","short_url":"https://url-shortener-microservice-gkobilansky.c9users.io/8228","_id":"579a1835fcdc933448e65a85"}
+           {"original_url":"http://google.com","short_url":"https://fierce-plains-96108.herokuapp.com/8228"}
            </pre>
         </div>
     </body>
