--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
                </span>
             </form>
             <h3>Sample result:</h3>
-            <p>http://lancekey.com/2375</p>
+            <p>https://fierce-plains-96108.herokuapp.com/8228</p>
             <h3>Also available as API</h3>
-           <p><code>lancekey.com/new/www.example.com</code> responds with JSON:</p>
+           <p><code>https://fierce-plains-96108.herokuapp.com/new/www.example.com</code> responds with JSON:</p>
            <pre>
            {"original_url":"http://google.com","short_url":"https://fierce-plains-96108.herokuapp.com/8228"}
            </pre>
